Update schema name for ref POST and PUT
